correct firefox flexbox border and add missing alt

--- a/basic/index.html
+++ b/basic/index.html
@@ -21,7 +21,7 @@
         <nav>
             <article>
                 <a href="#">
-                    <img src="images/fountain-675488_640.jpg">
+                    <img src="images/fountain-675488_640.jpg" alt="boudha">
                     <div class="details">
                         <h4 class="main_title">Ut enim ad minima veniam, quis nostrum exercitationem ullam</h4>
                         <span>Lorem Ipsum</span>
@@ -30,7 +30,7 @@
             </article>
             <article>
                 <a href="#">
-                    <img src="images/the-yellow-dragon-1787330_640.jpg">
+                    <img src="images/the-yellow-dragon-1787330_640.jpg" alt="nature">
                     <div class="details">
                         <h4>Nor again is there anyone who loves or pursues or desires to obtain pain</h4>
                         <span>Lorem Ipsum</span>
@@ -40,7 +40,7 @@
             <article>
                 <a href="#">
                     <img src="images/yellow-gentian-603227_640.jpg">
-                    <div class="details">
+                    <div class="details" alt="tree">
                         <h4> Et harum quidem rerum facilis est et expedita distinctio.</h4>
                         <span>Lorem Ipsum</span>
                     </div>
@@ -48,7 +48,7 @@
             </article>
             <article>
                 <a href="#">
-                    <img src="images/common-blue-2090363_640.jpg">
+                    <img src="images/common-blue-2090363_640.jpg" alt="papillon">
                     <div class="details">
                         <h4>Excepteur sint occaecat cupidatat non proident aliquam quaerat voluptatem</h4>
                         <span>Lorem Ipsum</span>
@@ -57,7 +57,7 @@
             </article>
             <article>
                 <a href="#">
-                    <img src="images/heart-1407248_640.jpg">
+                    <img src="images/heart-1407248_640.jpg" alt="ground">
                     <div class="details">
                         <h4>Led quia non numquam eius modi tempora incidunt ut labore et dolore magnam </h4>
                         <span>Lorem Ipsum</span>
@@ -65,28 +65,36 @@
                 </a>
             </article>
         </nav>
-	<main>
-		<h1>An ocean is a major body of saline water</h1>
-		<div>
-			<img src="images/whales-1149978_640.jpg">
-			<section>
-				<h3>Lorem ipsum</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</section>
-			<section>
-				<h3>Sed ut perspiciatis</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-			</section>
-			<section>
-				<h3>At vero eos</h3>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
-			</section>
-			<section>
-				<h3>Temporibus autem </h3>
-				<p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-			</section>
-		</div>
-	</main>
+		<main>
+			<h1>An ocean is a major body of saline water</h1>
+			<div class="content">
+				<img src="images/whales-1149978_640.jpg" alt="oceans">
+				<section>
+					<h3>Lorem ipsum</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</section>
+				<section>
+					<h3>Sed ut perspiciatis</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+				</section>
+				<section>
+					<h3>At vero eos</h3>
+					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
+				</section>
+				<section>
+					<h3>Temporibus autem </h3>
+					<p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+				</section>
+			</div>
+			<div class="prefooter">
+				<ul>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+				</ul>
+			</div>
+		</main>
     </div>
 	<footer>Copyright 2017 | Nature</footer>
 </body>
